<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/new_task_add_dialog"
    >

    <!--Input task details-->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:hint="Add task details"
        android:id="@+id/task_add_text"
        android:layout_marginHorizontal="20dp"

        />

    <Spinner
        android:id="@+id/select_tag"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="20dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>

    <Spinner
        android:id="@+id/select_hours"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="20dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:text="Select Due Date"
        android:layout_marginTop="15dp"
        android:id="@+id/select_due_date_button"
        />

</LinearLayout>